# manifest-parser-cpp

./: CMakeLists.txt  README.md
cmake/: ManifestParserConfig.cmake.in  sources.cmake
include/manifestparser/: process.hpp  types.hpp
src/: process.cpp
src/filter/: filter_depots.cpp  filter_depots.hpp
src/lua/: lua_parser.cpp  lua_parser.hpp
src/split/: split_manifests.cpp  split_manifests.hpp
